yaml/trip-insights-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    name: api
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    name: web
