yaml/trip-insights-trip-viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-insights-trip-viewer
spec:
  type: ClusterIP
  selector:
    app: trip-insights-trip-viewer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
