yaml/trip-insights-trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-insights-trips
spec:
  type: ClusterIP
  selector:
    app: trip-insights-trips
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
