yaml/trip-insights-user-profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-insights-user-profile
spec:
  type: ClusterIP
  selector:
    app: trip-insights-user-profile
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
