yaml/trip-insights-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-insights-user
spec:
  type: ClusterIP
  selector:
    app: trip-insights-user
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
