yaml/trip-insights-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trip-insights-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: trip-insights.91e0e83cb7fe44919a38.eastus.aksapp.io
      http:
        paths:
          - backend:
              service:
                name: trip-insights-trip-viewer
                port:
                  number: 80
            path: /trip-viewer
            pathType: Prefix
